[package]
name = "blazor_website"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console_error_panic_hook = "0.1.7"
leptos = { version = "0.5.1", features = ["csr", "nightly"] }
leptos_router = "0.5.1"
rand = "0.8.5"
shuffle = "0.1.7"

[profile.release]
lto = true
opt-level = 's'

